--- a/resources/extra2desc.yaml
+++ b/resources/extra2desc.yaml
@@ -59,8 +59,10 @@ tools:
     print chords i, iv and v for current key
   transcribe: |
     transcribe given audio-file approximately
-  search-in-licks, search: |
+  search-in-licks: |
     search given sequence of holes (or equiv) among licks
+  search-in-scales: |
+    search given lick or sequence of holes (or equiv) among scales
   edit-licks: |
     invoke editor on your lickfile 
   edit-config: |
