new option --show-options

--- a/resources/opt2desc.yaml
+++ b/resources/opt2desc.yaml
@@ -244,3 +244,6 @@ flats:
   - |
     When printing notes, prefer flats (e.g. bf)
     
+options:
+  - |
+    show full list of mode specific options
