--- a/config/intervals.yaml
+++ b/config/intervals.yaml
@@ -13,14 +13,19 @@
   - mT
   - third
   - quiz_easy
+'5':
+  - perfect Fourth
+  - pFo
+  - tritone
+  - quiz_hard
 '6':
   - flat Fifth
-  - fF
+  - fFi
   - tritone
   - quiz_hard
 '7':
   - per Fifth
-  - pF
+  - pFi
   - fifth
   - quiz_easy
 '9':
