--- a/resources/opt2desc.yaml
+++ b/resources/opt2desc.yaml
@@ -115,6 +115,14 @@ no_tags_all:
     same effect as --no-tags-any
   - TAG1,TAG2,...
 
+licks:
+  - |
+    specify all the licks to use by their name;
+    helpful if you have specific licks in mind e.g. for chords and
+    turnaround. If you use this option, the options to select via tags
+    (e.g. --tags-all) are ignored.
+  - NAME1,NAME2,...
+
 max_holes:
   - |
     filter licks and keep those, that have
