--- a/config/intervals.yaml
+++ b/config/intervals.yaml
@@ -14,9 +14,8 @@
   - third
   - quiz_easy
 '5':
-  - perfect Fourth
+  - perf Fourth
   - pFo
-  - tritone
   - quiz_hard
 '6':
   - flat Fifth
@@ -24,7 +23,7 @@
   - tritone
   - quiz_hard
 '7':
-  - per Fifth
+  - perf Fifth
   - pFi
   - fifth
   - quiz_easy
