--- a/resources/players.yaml
+++ b/resources/players.yaml
@@ -122,6 +122,7 @@
   - Baby Will You Please Help Me
   - If I Should Have Bad Luck
   - My Kinda Gal
+  - Cha Cha The Blues
   - Christo Redemptor
 
 
