--- a/resources/opt2desc.yaml
+++ b/resources/opt2desc.yaml
@@ -19,14 +19,12 @@ remove_scales:
   - SCALE1,SCALE2,...
 
 no_add_holes:
-
   - |
     for holes from the primary scale, take remarks,
     colors and scale-name from the additional scales; but 
     do not add any new holes
     
 transpose_scale:
-
   - |
     transpose the scale to given
     key (e.g. d) or by semitones (e.g. 12st).  This would be helpful,
@@ -66,7 +64,6 @@ no_progress:
   - "do not check for correctness of played holes,\njust show, what you play"
   
 loop:
-
   - |
     when the sequence has been played correctly, do not advance,
     but rather query the same sequence again; repeat until you press
@@ -84,7 +81,6 @@ hole:
   - HOLE
 
 tags_any:
-
   - |
     filter licks and keep those
     having any of the given tags (example: --tags-any scales,classic).
@@ -141,7 +137,6 @@ reverse:
   - play the sequence of holes but reverse it first
   
 start_with:
-
   - |
     the name of the first lick to play;
     accepts the special values 'last' or 'l' to repeat the last lick
@@ -154,7 +149,6 @@ start_with:
   - LICK_OR_L
 
 iterate:
-
   - |
     how to iterate through all
     selected licks; this can be either 'random' (pick licks at random)
@@ -163,7 +157,6 @@ iterate:
   - RANDOM_OR_CYCLE
 
 partial:
-
   - |
     to make the mode 'licks' more
     *challenging* and to improve the learning result, you may let only
@@ -184,7 +177,6 @@ partial:
   - PARTIAL_SPEC
   
 time_slice:
-
   - |
     time slice (one of short,
     medium, long) for sensing holes played. In each time slice a
@@ -211,20 +203,17 @@ viewer:
   - NONE_FEH_CHAFA
   
 terse:
-
   - |
     Be somewhat less verbose than usual. The exact effect
     (if any) depends on the subcommand chosen.
   
 scale_over_lick:
-
   - |
     For modes play and print: interpret
     a given name as a scale if it is known as a scale as well as a
     lick.  By default such a name would be treated as a lick.
 
 read_fifo:
-
   - |
     For mode listen, licks, quiz: when in the main
     interactive view, read keys from fifo /tmp/harpwise_fifo too.
@@ -254,3 +243,11 @@ flats:
 options:
   - |
     show full list of mode specific options
+
+adhoc_lick:
+  - |
+    Adhoc-lick on the commandline.
+    With this option you may give a lick on the commandline to work
+    with and avoid adding i to your lickfile first.
+  - HOLES_WITH_COMMAS
+
