--- a/resources/players.yaml
+++ b/resources/players.yaml
@@ -407,12 +407,16 @@
   - December 18, 1947 -
   - American blues harmonica player and singer
   notes:
-  - With his wife Honey, forms The Mighty Flyers
   - Born in California, started with guitar at age of 6 or 7
   - Has toured US, Canada and Europe
+  - With his wife Honey, forms The Mighty Flyers;
+  - their boogie sound combines the styles of jump blues,
+  - West Coast blues and Chicago blues.
   source: https://en.wikipedia.org/wiki/Rod_Piazza
   songs:
   - Southern Lady
+  - The Upsetter
+  - Ghostin
 
 
 - name: Son of Dave
