wording and fixes

--- a/resources/players.yaml
+++ b/resources/players.yaml
@@ -525,4 +525,55 @@
   songs:
   - Diddle It
   - Blues del Junco
+
   
+- name: Alan House
+  bio:
+  notes:
+  source:
+  songs:
+
+
+- name: Indiara Sfair
+  bio:
+  notes:
+  source:
+  songs:    
+
+
+- name: Sugar Blue
+  bio:
+  notes:
+  source:
+  songs:    
+
+
+- name: Carey Bell
+  bio:
+  notes:
+  source:
+  songs:    
+
+
+- name: Magic Dick
+  bio:
+  notes:
+  source:
+  songs:
+
+
+- name: DeFord Bailey
+  bio:
+  notes:
+  source:
+  songs:    
+
+        
+- name: Billy Branch
+  bio:
+  notes:
+  source:
+  songs:    
+
+    
+        
