fix, more info on licks

--- a/config/config.ini
+++ b/config/config.ini
@@ -78,7 +78,12 @@
 [licks]
   comment = holes-all
   immediate = true
-  tags_any = 
+  tags_all = 
+  # other tags configurations would be, type 'harpwise licks -o'
+  # to read their description
+  # tags_any = 
+  # drop_tags_all = 
+  # drop_tags_any = 
 
 [calibrate]
   # db used for volume clause when doing auto calibration
