chords with and without flat seventh

--- a/config/config.ini
+++ b/config/config.ini
@@ -55,7 +55,7 @@
   #
   display = chart-scales
   comment = note
-  add_scales = chord-i,chord-iv,chord-v
+  add_scales = chord-i7,chord-iv7,chord-v7
   fast = true
   immediate = false
   loop = true
