--- a/config/richter/scale_chord-i7_with_holes.yaml
+++ b/config/richter/scale_chord-i7_with_holes.yaml
@@ -1,11 +1,13 @@
 ---
 - short: 1
-- desc: major chord I without flat seventh
+- desc: major chord I with added flat seventh
 - "-2 root"
 - "-3"
 - "-4"
+- "-5"
 - "+6 root"
 - "-7"
 - "-8"
+- "-9"
 - "+9 root"
 - "+10/"
