--- a/config/richter/scale_chord-iv7_with_holes.yaml
+++ b/config/richter/scale_chord-iv7_with_holes.yaml
@@ -1,13 +1,15 @@
 ---
 - short: 4
-- desc: major chord IV without flat seventh
+- desc: major chord v with added flat seventh
 - "+1 root"
 - "+2"
 - "-2"
+- "-3/"
 - "+4 root"
 - "+5"
 - "+6"
 - "+7 root"
 - "+8"
 - "+9"
+- "+10//"
 - "+10 root"
