--- a/config/richter/scale_chord-v7_with_holes.yaml
+++ b/config/richter/scale_chord-v7_with_holes.yaml
@@ -1,11 +1,14 @@
 ---
 - short: 5
-- desc: major chord V without flat seventh
+- desc: major chord V with added flat seventh
 - "-1 root"
 - "-2/"
 - "-3//"
+- "+4"
 - "-4 root"
 - "-6"
+- "+7"
 - "-8 root"
 - "+9/"
 - "-10"
+- "+10"
