--- a/resources/extra2desc.yaml
+++ b/resources/extra2desc.yaml
@@ -84,6 +84,8 @@ quiz:
     flavour that use your microphone and switche to listen-perspective
   silent: |
     flavours that can be tried with muted speakers
+  inter: |
+    flavours that revolve around intervals
   choose: |
     choose flavour right away
   players: |
