tags-config for any_mode; blink for help

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,33 +1,44 @@
 #
-# This file contains the global configuration for harpwise
+# This file contains the global default-configuration for harpwise
 #
-# Please do not modify; rather override values in
+# Please do not try to modify it; rather override values in
 #
 #   ~/.harpwise/config.yaml
 #
-# ,which will be created on first invocation of harpwise.
+# ,which mirrors the structure of this file and will be created on
+# first invocation of harpwise.
 #
 
+
 #
-# This file has 5 sections:
+# Regarding the overall structure, this file has 8 sections:
 #
 # The first section [any-mode] defines default values for all modes,
-# which may be overriden in one of the three sections for the
-# individual modes, [listen], [quiz] and [licks].
+# which may be overriden in one of the sections for the
+# individual modes, [listen], [quiz], [licks], [play], [print], [calibrate].
 #
-# These four sections together define the interactive behaviour of
+# These 1 + 6 sections together define the interactive behaviour of
 # harpwise and may be overridden by commandline arguments: e.g. the
 # key 'comment' from this file will only be effective, if no option
 # '--comment' is given on the commandline.
 #
-# The fifth and final section [general] has values, that can only be
-# changed here and are not available as options. They mostly have
-# influence on the inner workings of harpwise.
+# Please note, that commandline-arguments have their own documentation
+# (available with '-o'), which may supplement the infos given below
+# for individual configs.
 #
-# Remark: Even if you do not change a value here and do not specify it
-# as a commandline-argument, you may change its values (at least in
-# many cases) interactively, while harpwise is running; type 'h' for
-# help on this.
+# The final section [general] has values, that can neither be changed
+# for idividual modes nor are they available as options. They mostly
+# have influence on the inner workings of harpwise.
+#
+
+
+#
+# Some Remarks:
+#
+# Even if you do not change a value here and do not specify it as a
+# commandline-argument, you may change its values (at least in many
+# cases) interactively, while harpwise is running; type 'h' for help
+# on this.
 #
 # In this file, watch out for keys, that contain an underscore,
 # e.g. 'add_scales': their corresponding commandline-argument has a
@@ -38,6 +49,7 @@
 # beeing, that they do not lend themselves to beeing set once and for
 # all.
 #
+
 
 [any-mode]
   # Type is the second argument on the commandline (after the mode),
@@ -69,21 +81,30 @@
   viewer = none
   viewer_scale_to = 400
 
+  # Tags for lick selection; interesting for modes licks, play or print
+  # Type 'harpwise licks -o' to read their description
+  tags_all = 
+  tags_any = 
+  drop_tags_all = 
+  drop_tags_any = 
+
 [listen]
 
 [quiz]
   comment = holes-some
+  # see option --difficulty for more details on this
   difficulty = easy
 
 [licks]
   comment = holes-all
   immediate = true
-  tags_all = 
-  # other tags configurations would be, type 'harpwise licks -o'
-  # to read their description
-  # tags_any = 
-  # drop_tags_all = 
-  # drop_tags_any = 
+
+#
+# Nothing special for these two modes, so see [any-mode], e.g. for tags
+#
+[play]
+
+[print]
 
 [calibrate]
   # db used for volume clause when doing auto calibration
